tests/purs/passing/Operators/Other.purs
module Other where

foo :: String -> String
foo s = s

baz :: String -> String -> String
baz s _ = s
