tests/purs/failing/VisibleTypeApplications3.purs
-- @shouldFailWith CannotSkipTypeApplication
module Main where

class Foo @foo where
  foo :: String

foo' = foo @_
